--- a/demux-print.cabal
+++ b/demux-print.cabal
@@ -15,16 +15,18 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 Library
-  Source-repository head
-    type:     git
-    location: https://github.com/rrnewton/demux-print
   Exposed-modules:  UI.DemuxPrint
   CPP-options: -DNOTESTING
-  build-depends    base ==4.6.*, transformers ==0.3.*, containers ==0.5.*, text ==0.11.*, 
-                   bytestring ==0.10.*, io-streams ==1.0.*, hscurses ==1.4.*, 
-                   mtl ==2.1.*, semigroups ==0.9.*
-   -- ncurses ==0.2.*, 
---  build-tools:         chs
+  build-depends: base, transformers, containers, text, bytestring, io-streams,
+                 semigroups, mtl, hscurses
+  -- build-depends base ==4.6.*, transformers ==0.3.*, containers ==0.5.*, text ==0.11.*, 
+  --               mtl ==2.1.*, semigroups ==0.9.*,
+  --               bytestring ==0.10.*, io-streams ==1.0.*, hscurses ==1.4.*
+
+  -- Source-repository head
+  --   type:     git
+  --   location: https://github.com/rrnewton/demux-print
+
 
 -- Test-Suite test-demux-print
 --     type:       exitcode-stdio-1.0
