--- a/hydra-print.cabal
+++ b/hydra-print.cabal
@@ -33,7 +33,7 @@ Library
     type:     git
     location: https://github.com/rrnewton/hydra-print
   build-depends: base, transformers, containers, text, bytestring, io-streams,
-                 semigroups, mtl, hscurses
+                 semigroups, mtl, hscurses, directory
   -- build-depends base ==4.6.*, transformers ==0.3.*, containers ==0.5.*, text ==0.11.*, 
   --               mtl ==2.1.*, semigroups ==0.9.*,
   --               bytestring ==0.10.*, io-streams ==1.0.*, hscurses ==1.4.*
@@ -43,8 +43,7 @@ Test-Suite test-hydra-print
     main-is:    TestFramework.hs
     -- DUPLICATED from above
     build-depends: base, transformers, containers, text, bytestring, io-streams,
-                   semigroups, mtl, hscurses,
-
+                   semigroups, mtl, hscurses, directory,
     -- Additional dependencies:
     ---------------------------
                    QuickCheck                 ==2.5.*,
