--- a/hydra-print.cabal
+++ b/hydra-print.cabal
@@ -35,6 +35,8 @@ Library
     location: https://github.com/rrnewton/hydra-print
   build-depends: base, transformers, containers, text, bytestring, io-streams,
                  semigroups, mtl, ncurses, directory, async
+-- TEMP
+                 , unix, process
   -- build-depends base ==4.6.*, transformers ==0.3.*, containers ==0.5.*, text ==0.11.*, 
   --               mtl ==2.1.*, semigroups ==0.9.*,
   --               bytestring ==0.10.*, io-streams ==1.0.*, hscurses ==1.4.*
@@ -53,3 +55,11 @@ Test-Suite test-hydra-print
                    test-framework-hunit       ==0.3.*,
                    test-framework-quickcheck2 ==0.3.*,
                    test-framework-th          ==0.2.*
+
+
+Executable hydra-view
+  main-is:           hydra-view.hs
+  CPP-options: -DNOTESTING  
+  build-depends: base, transformers, containers, text, bytestring, io-streams,
+                 semigroups, mtl, ncurses, directory, async, unix, 
+                 filepath, process
