--- a/hydra-print.cabal
+++ b/hydra-print.cabal
@@ -35,8 +35,8 @@ Library
     location: https://github.com/rrnewton/hydra-print
   build-depends: base, transformers, containers, text, bytestring, io-streams,
                  semigroups, mtl, ncurses, directory, async
--- TEMP
-                 , unix, process, time
+-- TEMP:
+                 , unix, process, time, random
   -- build-depends base ==4.6.*, transformers ==0.3.*, containers ==0.5.*, text ==0.11.*, 
   --               mtl ==2.1.*, semigroups ==0.9.*,
   --               bytestring ==0.10.*, io-streams ==1.0.*, hscurses ==1.4.*
@@ -62,4 +62,13 @@ Executable hydra-view
   CPP-options: -DNOTESTING  
   build-depends: base, transformers, containers, text, bytestring, io-streams,
                  semigroups, mtl, ncurses, directory, async, unix, 
-                 filepath, process, time
+                 filepath, process, time, random
+
+Executable hydra-head
+  main-is:           hydra-head.hs
+  CPP-options: -DNOTESTING  
+  build-depends: base, transformers, containers, text, bytestring, io-streams,
+                 semigroups, mtl, ncurses, directory, async, unix, 
+                 filepath, process, time, random
+
+
