--- a/hydra-print.cabal
+++ b/hydra-print.cabal
@@ -35,6 +35,7 @@ extra-source-files:
 
 Library
   Exposed-modules:  UI.HydraPrint
+                    Scripting.Parallel
                     Scripting.Parallel.ThreadPool
   CPP-options: -DNOTESTING
   build-depends: base >= 4.5 && <= 4.7, transformers, containers, text, bytestring, io-streams,
@@ -62,10 +63,10 @@ Test-Suite unittest-hydra-print
                    test-framework-th          ==0.2.*
 
 -- Test-Suite systemtest-hydra-print
+--    type:       exitcode-stdio-1.0
 -- This needs a proper terminal to run, so we leave it to the user, rather than
 -- running it as a cabal test suite.
 Executable systemtest-hydra-print
-    type:       exitcode-stdio-1.0
     main-is:    SystemTest.hs
     CPP-options: -DNOTESTING      
     -- DUPLICATED from above
