--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,11 @@ before_install:
 - export PATH=~/.local/bin:$PATH
 - travis_retry curl -L https://github.com/commercialhaskell/stack/releases/download/v0.1.1.0/stack-0.1.1.0-x86_64-linux.gz | gunzip > ~/.local/bin/stack
 - chmod a+x ~/.local/bin/stack
+- cat /proc/cpuinfo | grep name
 
 install:
-  - stack setup --no-terminal
-  - stack build --only-snapshot --no-terminal
+  - stack setup --no-terminal +RTS -N1 -RTS
+  - stack build --only-snapshot --no-terminal +RTS -N1 -RTS
 
 script:
-  - stack test --no-terminal
+  - stack test --no-terminal +RTS -N1 -RTS
